--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: custom_cardgridview
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/patilamit1999/custom_cardgridview
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
